tests/ui/resolve/conflicts.stderr
error: No visibility specified. Did you intend to add public?
  --> ROOT/tests/ui/resolve/conflicts.sol:LL:CC
   |
LL |     function f2(uint) pure {}
   |              ^^
   |

error: No visibility specified. Did you intend to add public?
  --> ROOT/tests/ui/resolve/conflicts.sol:LL:CC
   |
LL |     function f2(int) pure {}
   |              ^^
   |

error: aborting due to 2 previous errors

